--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="item text3"> 
                 <h3>منظور کنندہ
                 </h3>
-                <p>رانا سجاد اقبال ولد رانا محمد رمضان 
+                <p>سرفراز احمد چیمہ ولد محمد خاں چہمہ 
                 </p>
             </div>
             <div class="item text4">
